examples/negative/patterns/pattern_duplicate_literal_arm.kai
# Issue #534 shape 3: two arms of a `match` use the same integer
# literal `1`. The second arm is unreachable. Reachability must
# reject.

fn f(x: Int) : Int = match x {
  1 -> 10
  1 -> 20
  _ -> 0
}

fn main() : Int = f(1)
